log
Wed 08 May 2024 07:46:45 PM UTC: 
 tests:  1|8
total_score: 0/70
0008785
Thu 09 May 2024 01:03:06 AM UTC: 
 treemap.c | 58 ++++++++++++++++++++++++++++++++++++++--------------------
 1 file changed, 38 insertions(+), 20 deletions(-)
 tests:  4|7
total_score: 5/70
ea03519
Fri 10 May 2024 02:06:47 AM UTC: 
 treemap.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
 tests:  11|6
total_score: 15/70
b033535
Fri 10 May 2024 07:13:59 PM UTC: 
 treemap.c | 40 +++++++++++++++++++++++++++++++++++++++-
 1 file changed, 39 insertions(+), 1 deletion(-)
In file included from test.c:4:
treemap.c:93:9: error: expected identifier or ‘(’ before ‘}’ token
   93 |         }
      |         ^
treemap.c:94:5: error: expected identifier or ‘(’ before ‘}’ token
   94 |     }
      |     ^
treemap.c:95:1: error: expected identifier or ‘(’ before ‘}’ token
   95 | }
      | ^
Compilation failed
4b827a7
Fri 10 May 2024 07:14:13 PM UTC: 
 treemap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  13|5
total_score: 25/70
088f259
Fri 10 May 2024 07:15:26 PM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  15|4
total_score: 25/70
a0e7e79
Fri 10 May 2024 07:30:34 PM UTC: 
 treemap.c | 55 +++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 55 insertions(+)
 tests:  16|4
total_score: 30/70
2ca9fc2
Sat 11 May 2024 07:05:16 PM UTC: 
 treemap.c | 41 ++++++++++++++++++++++-------------------
 1 file changed, 22 insertions(+), 19 deletions(-)
 tests:  0|0
33a6330
